--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ width: 100%;
   <div class="tree center">
     <canvas id='my-canvas' width="2000" height="800">
       Your browser does not support canvas
-	  <script src="./myfibMob.min.js"></script>
+	  <script src="./myFibMob.min.js"></script>
     </canvas>
   </div>
     
